tests/miniJava/pos/001093_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) System.out.println ( { } ) ; else System.out.println ( { } ) ; } }
