tests/miniJava/neg/000119_mutation.MiniJava
class java { public Main void Main ( String [ ] java ) { { } } }
